sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:15: error: not found: value getValeurs
		if(getValeurs(j)<getValeurs(minimum) )
                   ^